# wb-recommended-goods

./: .gitignore  README.md  pyproject.toml  wb_recommended.py
